--- a/package.json
+++ b/package.json
@@ -3,21 +3,33 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "helmet": "^4.2.0",
-    "knex": "^0.21.14",
-    "morgan": "^1.10.0",
-    "path": "^0.12.7",
-    "pg": "^8.5.1",
-    "uuid": "^8.3.2",
-    "xss": "^1.0.8"
+      "scripts": {
+      "test": "mocha --require test/setup.js",
+      "dev": "nodemon src/server.js",
+      "migrate": "postgrator --config postgrator-config.js",
+      "migrate:test": "env NODE_ENV=test npm run migrate",
+      "start": "node src/server.js",
+      "predeploy": "npm audit",
+      "deploy": "git push heroku master"
+    },
+    "keywords": [],
+    "author": "Thomas `tomatao` Hudspith-Tatham <iammotivated@gmail.com>",
+    "license": "MIT",
+    "dependencies": {
+      "cors": "^2.8.5",
+      "dotenv": "^6.2.0",
+      "express": "^4.16.4",
+      "helmet": "^3.15.0",
+      "knex": "^0.16.3",
+      "morgan": "^1.9.1",
+      "pg": "^7.8.0",
+      "xss": "^1.0.3"
+    },
+    "devDependencies": {
+      "chai": "^4.2.0",
+      "mocha": "^5.2.0",
+      "nodemon": "^1.18.9",
+      "postgrator-cli": "^3.1.0",
+      "supertest": "^3.3.0"
+    }
   }
-}
