--- a/package.json
+++ b/package.json
@@ -3,33 +3,33 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-      "scripts": {
-      "test": "mocha --require test/setup.js",
-      "dev": "nodemon src/server.js",
-      "migrate": "postgrator --config postgrator-config.js",
-      "migrate:test": "env NODE_ENV=test npm run migrate",
-      "start": "node src/server.js",
-      "predeploy": "npm audit",
-      "deploy": "git push heroku master"
-    },
-    "keywords": [],
-    "author": "Thomas `tomatao` Hudspith-Tatham <iammotivated@gmail.com>",
-    "license": "MIT",
-    "dependencies": {
-      "cors": "^2.8.5",
-      "dotenv": "^6.2.0",
-      "express": "^4.16.4",
-      "helmet": "^3.15.0",
-      "knex": "^0.16.3",
-      "morgan": "^1.9.1",
-      "pg": "^7.8.0",
-      "xss": "^1.0.3",
-      "postgrator-cli": "^3.1.0"
-    },
-    "devDependencies": {
-      "chai": "^4.2.0",
-      "mocha": "^5.2.0",
-      "nodemon": "^1.18.9",
-      "supertest": "^3.3.0"
-    }
+  "scripts": {
+    "test": "mocha --require test/setup.js",
+    "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate",
+    "start": "node src/server.js",
+    "predeploy": "npm audit",
+    "deploy": "git push heroku master"
+  },
+  "keywords": [],
+  "author": "Chad Moravec",
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "helmet": "^3.15.0",
+    "knex": "^0.16.3",
+    "morgan": "^1.9.1",
+    "pg": "^7.18.2",
+    "postgrator-cli": "^3.3.0",
+    "xss": "^1.0.8"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.19.4",
+    "supertest": "^3.4.2"
   }
+}
