--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "dev": "nodemon src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
     "migrate:test": "env NODE_ENV=test npm run migrate",
-    "migrate:production": "heroku run npm run migrate",
+    "migrate:production": "env SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
     "start": "node src/server.js",
-    "predeploy": "npm audit",
-    "deploy": "git push heroku master",
-    "postdeploy": "npm run migrate:production"
+    "predeploy": "npm audit && npm run migrate:production",
+    "deploy": "git push heroku main"
   },
   "keywords": [],
   "author": "Chad Moravec",
@@ -31,7 +30,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^5.2.0",
+    "mocha": "^8.2.1",
     "nodemon": "^1.19.4",
     "supertest": "^3.4.2"
   }
